--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-fastapi
-uvicorn
-sqlalchemy
-pydantic
-psycopg2-binary
-pytest
-httpx
+fastapi==0.115.8
+uvicorn==0.34.0
+sqlalchemy==2.0.37
+pydantic==2.10.6
+psycopg2-binary==2.9.10
+pytest==8.3.4
+httpx==0.28.1
